--- a/home.html
+++ b/home.html
@@ -29,8 +29,8 @@
 }
 
 .mx_HomePage_header {
-    border: 1px solid #76CFA6;
-    background-color: #eaf5f0;
+    border: 1px solid rgb(255, 255, 255);
+    background-color: #fff;
     border-radius: 5px;
     align-items: center;
 }
